--- a/index.html
+++ b/index.html
@@ -1,40 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>CSS Kitten Wheelbarrow</title>
-  <link rel="stylesheet" href="css/wheelbarrow.css">
-  <link rel="stylesheet" href="css/place-kitty.css">
-</head>
-<body>
-  <div class="wrapper">
-    <!-- Wheelbarrow -->
-    <div id="wheelbarrow"></div>
-    <div id="wheelbarrow-foreground"></div>
+/* Select the image with a class of kitty-1 */
+.kitty-1 {
+  position: absolute;
+  z-index: 1;
+  top: 276px;
+  left: 129px;
+}
 
+/* Select the image with id of kitty-2 */
+#kitty-2 {
+  position: absolute;
+  z-index: 2;
+  top: 212px;
+  left: 369px;
+}
 
-    <!-- Kitties -->
+/* Select the image inside the element with an id of basket (using its descendent relationship) */
+#basket img {
+  position: absolute;
+  z-index: 5;
+  top: 291px;
+  left: 319px;
+}
 
-    <img src="images/kitty-5.png" alt="Kitty 5">
+/* Select the image based on it being a sibling that follows immediately after the element with an id of ball (using adjacent sibling selector) */
+#ball + img {
+  position: absolute;
+  z-index: 3;
+  top: 245px;   /* these are the real values from the starter file */
+  left: 190px;
+}
 
-    <img class="kitty-1" src="images/kitty-1.png" alt="Kitty 1">
-
-    <img id="kitty-2" src="images/kitty-2.png" alt="Kitty 2">
-
-    <div id="basket">
-      <img src="images/kitty-3.png" alt="kitty 3">
-    </div>
-
-    <div id="ball"></div>
-    <img src="images/kitty-4.png" alt="kitty 4">
-    
-
-  </div><!-- .wrapper -->
-  <audio id="player1">
-    <source src="audio/purrr.mp3" type="audio/mp3">
-    <source src="audio/purrr.ogg" type="audio/ogg">
-  </audio>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="js/purr-click.js"></script>
-</body>
-</html>
+/* Select the image that has an alt attribute value matching "Kitty 5", via the attribute selector */
+img[alt="Kitty 5"] {
+  position: absolute;
+  z-index: 4;
+  top: 180px;
+  left: 250px;
+}
